src/test/resources/amyc/typer/passing/Match2.grading.amy
object Match2
  1 match {
    case x => x + 1
  }
end Match2
