src/test/resources/amyc/typer/failing/MatchError3.grading.amy
object MatchError
  1 match {
    case 1 => ()
    case 2 => ""
  }
end MatchError
